--- a/base/base/base.vcxproj
+++ b/base/base/base.vcxproj
@@ -334,6 +334,9 @@
     <ClInclude Include="..\common\net\Defs\HeartBeatComp.h" />
     <ClInclude Include="..\common\net\Defs\HeartBeatCompImpl.h" />
     <ClInclude Include="..\common\net\Defs\IocpDefs.h" />
+    <ClInclude Include="..\common\net\Defs\PacketQueueNode.h" />
+    <ClInclude Include="..\common\net\Defs\Sender.h" />
+    <ClInclude Include="..\common\net\Defs\SenderImpl.h" />
     <ClInclude Include="..\common\net\Impl\FS_Client.h" />
     <ClInclude Include="..\common\net\Impl\FS_ClientImpl.h" />
     <ClInclude Include="..\common\net\Impl\FS_Iocp.h" />
@@ -439,6 +442,7 @@
     <ClCompile Include="..\common\net\Defs\FS_NetBufferArray.cpp" />
     <ClCompile Include="..\common\net\Defs\FS_Packet.cpp" />
     <ClCompile Include="..\common\net\Defs\IocpDefs.cpp" />
+    <ClCompile Include="..\common\net\Defs\Sender.cpp" />
     <ClCompile Include="..\common\net\Impl\FS_Client.cpp" />
     <ClCompile Include="..\common\net\Impl\FS_Iocp.cpp" />
     <ClCompile Include="..\common\net\Impl\FS_IocpMsgTransferServer.cpp" />
