--- a/base/base/base.vcxproj.filters
+++ b/base/base/base.vcxproj.filters
@@ -927,6 +927,24 @@
     <ClInclude Include="..\common\net\Defs\PacketQueueNode.h">
       <Filter>common\net\Defs</Filter>
     </ClInclude>
+    <ClInclude Include="..\common\net\Impl\FS_Session.h">
+      <Filter>common\net\Impl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\common\net\Impl\FS_SessionImpl.h">
+      <Filter>common\net\Impl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\common\net\Impl\FS_SessionMgr.h">
+      <Filter>common\net\Impl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\common\net\Impl\FS_SessionMgrImpl.h">
+      <Filter>common\net\Impl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\common\net\Impl\FS_Addr.h">
+      <Filter>common\net\Impl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\common\net\Impl\FS_AddrImpl.h">
+      <Filter>common\net\Impl</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -1177,6 +1195,15 @@
     </ClCompile>
     <ClCompile Include="..\common\net\Defs\PacketQueueNode.cpp">
       <Filter>common\net\Defs</Filter>
+    </ClCompile>
+    <ClCompile Include="..\common\net\Impl\FS_Session.cpp">
+      <Filter>common\net\Impl</Filter>
+    </ClCompile>
+    <ClCompile Include="..\common\net\Impl\FS_SessionMgr.cpp">
+      <Filter>common\net\Impl</Filter>
+    </ClCompile>
+    <ClCompile Include="..\common\net\Impl\FS_Addr.cpp">
+      <Filter>common\net\Impl</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
