【base】服务器模型

--- a/base/base/base.vcxproj
+++ b/base/base/base.vcxproj
@@ -341,22 +341,39 @@
     <ClInclude Include="..\common\net\Impl\FS_AddrImpl.h" />
     <ClInclude Include="..\common\net\Impl\FS_Client.h" />
     <ClInclude Include="..\common\net\Impl\FS_ClientImpl.h" />
+    <ClInclude Include="..\common\net\Impl\FS_ConnectorFactory.h" />
     <ClInclude Include="..\common\net\Impl\FS_Iocp.h" />
+    <ClInclude Include="..\common\net\Impl\FS_IocpConnector.h" />
     <ClInclude Include="..\common\net\Impl\FS_IocpImpl.h" />
+    <ClInclude Include="..\common\net\Impl\FS_IocpMsgHandler.h" />
+    <ClInclude Include="..\common\net\Impl\FS_IocpMsgHandlerImpl.h" />
+    <ClInclude Include="..\common\net\Impl\FS_IocpMsgTransfer.h" />
+    <ClInclude Include="..\common\net\Impl\FS_IocpMsgTransferImpl.h" />
     <ClInclude Include="..\common\net\Impl\FS_IocpMsgTransferServer.h" />
     <ClInclude Include="..\common\net\Impl\FS_IocpMsgTransferServerImpl.h" />
     <ClInclude Include="..\common\net\Impl\FS_MainIocpServer.h" />
     <ClInclude Include="..\common\net\Impl\FS_MainIocpServerImpl.h" />
+    <ClInclude Include="..\common\net\Impl\FS_MsgHandlerFactory.h" />
     <ClInclude Include="..\common\net\Impl\FS_MsgReadStream.h" />
     <ClInclude Include="..\common\net\Impl\FS_MsgReadStreamImpl.h" />
+    <ClInclude Include="..\common\net\Impl\FS_MsgTransferFactory.h" />
     <ClInclude Include="..\common\net\Impl\FS_MsgWriteStream.h" />
     <ClInclude Include="..\common\net\Impl\FS_MsgWriteStreamImpl.h" />
     <ClInclude Include="..\common\net\Impl\FS_Server.h" />
+    <ClInclude Include="..\common\net\Impl\FS_ServerConfigMgrFactory.h" />
+    <ClInclude Include="..\common\net\Impl\FS_ServerCore.h" />
+    <ClInclude Include="..\common\net\Impl\FS_ServerCoreImpl.h" />
     <ClInclude Include="..\common\net\Impl\FS_ServerImpl.h" />
     <ClInclude Include="..\common\net\Impl\FS_SessionMgr.h" />
     <ClInclude Include="..\common\net\Impl\FS_SessionMgrImpl.h" />
     <ClInclude Include="..\common\net\Impl\FS_TcpServer.h" />
     <ClInclude Include="..\common\net\Impl\FS_TcpServerImpl.h" />
+    <ClInclude Include="..\common\net\Impl\IFS_Connector.h" />
+    <ClInclude Include="..\common\net\Impl\IFS_ConnectorImpl.h" />
+    <ClInclude Include="..\common\net\Impl\IFS_MsgHandler.h" />
+    <ClInclude Include="..\common\net\Impl\IFS_MsgTransfer.h" />
+    <ClInclude Include="..\common\net\Impl\IFS_MsgTransferImpl.h" />
+    <ClInclude Include="..\common\net\Impl\IFS_ServerConfigMgr.h" />
     <ClInclude Include="..\common\net\Impl\Iocp\Example.h" />
     <ClInclude Include="..\common\net\Impl\FS_Session.h" />
     <ClInclude Include="..\common\net\Impl\FS_SessionImpl.h" />
@@ -452,14 +469,26 @@
     <ClCompile Include="..\common\net\Defs\Sender.cpp" />
     <ClCompile Include="..\common\net\Impl\FS_Addr.cpp" />
     <ClCompile Include="..\common\net\Impl\FS_Client.cpp" />
+    <ClCompile Include="..\common\net\Impl\FS_ConnectorFactory.cpp" />
     <ClCompile Include="..\common\net\Impl\FS_Iocp.cpp" />
+    <ClCompile Include="..\common\net\Impl\FS_IocpConnector.cpp" />
+    <ClCompile Include="..\common\net\Impl\FS_IocpMsgHandler.cpp" />
+    <ClCompile Include="..\common\net\Impl\FS_IocpMsgTransfer.cpp" />
     <ClCompile Include="..\common\net\Impl\FS_IocpMsgTransferServer.cpp" />
     <ClCompile Include="..\common\net\Impl\FS_MainIocpServer.cpp" />
+    <ClCompile Include="..\common\net\Impl\FS_MsgHandlerFactory.cpp" />
     <ClCompile Include="..\common\net\Impl\FS_MsgReadStream.cpp" />
+    <ClCompile Include="..\common\net\Impl\FS_MsgTransferFactory.cpp" />
     <ClCompile Include="..\common\net\Impl\FS_MsgWriteStream.cpp" />
     <ClCompile Include="..\common\net\Impl\FS_Server.cpp" />
+    <ClCompile Include="..\common\net\Impl\FS_ServerConfigMgrFactory.cpp" />
+    <ClCompile Include="..\common\net\Impl\FS_ServerCore.cpp" />
     <ClCompile Include="..\common\net\Impl\FS_SessionMgr.cpp" />
     <ClCompile Include="..\common\net\Impl\FS_TcpServer.cpp" />
+    <ClCompile Include="..\common\net\Impl\IFS_Connector.cpp" />
+    <ClCompile Include="..\common\net\Impl\IFS_MsgHandler.cpp" />
+    <ClCompile Include="..\common\net\Impl\IFS_MsgTransfer.cpp" />
+    <ClCompile Include="..\common\net\Impl\IFS_ServerConfigMgr.cpp" />
     <ClCompile Include="..\common\net\Impl\Iocp\Example.cpp" />
     <ClCompile Include="..\common\net\Impl\FS_Session.cpp" />
     <ClCompile Include="..\common\net\protocol\defs\ProtocolDefs.cpp" />
