【base】添加singleton测试用例，fileutil支持去除扩展名，fs_string支持移除首尾0，log支持强制flush着盘，log支持依据进程名创建log根目录

--- a/TestSuit/TestSuit/TestSuit.vcxproj
+++ b/TestSuit/TestSuit/TestSuit.vcxproj
@@ -170,6 +170,7 @@
     <ClInclude Include="TestInst\TestObjPool.h" />
     <ClInclude Include="TestInst\TestRandom.h" />
     <ClInclude Include="TestInst\TestServer.h" />
+    <ClInclude Include="TestInst\TestSingleton.h" />
     <ClInclude Include="TestInst\TestString.h" />
     <ClInclude Include="TestInst\TestSystemUtil.h" />
     <ClInclude Include="TestInst\TestThreadPool.h" />
