--- a/TestSuit/TestSuit/TestSuit.vcxproj
+++ b/TestSuit/TestSuit/TestSuit.vcxproj
@@ -170,6 +170,7 @@
     <ClInclude Include="TestInst\TestMemoryPool.h" />
     <ClInclude Include="TestInst\TestObjPool.h" />
     <ClInclude Include="TestInst\TestRandom.h" />
+    <ClInclude Include="TestInst\TestRtti.h" />
     <ClInclude Include="TestInst\TestServer.h" />
     <ClInclude Include="TestInst\TestSingleton.h" />
     <ClInclude Include="TestInst\TestString.h" />
