--- a/TestSuit/TestSuit/TestSuit.vcxproj.filters
+++ b/TestSuit/TestSuit/TestSuit.vcxproj.filters
@@ -111,6 +111,9 @@
     <ClInclude Include="TestInst\TestRtti.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="TestInst\TestInterfaceComps.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
