--- a/base/base/base.vcxproj
+++ b/base/base/base.vcxproj
@@ -278,6 +278,8 @@
     <ClInclude Include="..\common\component\Impl\FS_TlsTable.h" />
     <ClInclude Include="..\common\component\Impl\FS_TlsTableImpl.h" />
     <ClInclude Include="..\common\component\Impl\GlobalInitialize.h" />
+    <ClInclude Include="..\common\component\Impl\InterfaceComps.h" />
+    <ClInclude Include="..\common\component\Impl\InterfaceCompsImpl.h" />
     <ClInclude Include="..\common\component\Impl\SingletonAgency.h" />
     <ClInclude Include="..\common\component\Impl\SingletonAgencyImpl.h" />
     <ClInclude Include="..\common\component\Impl\SmartVar\SmartVar.h" />
@@ -351,6 +353,7 @@
     <ClInclude Include="..\common\net\Defs\PacketQueueNode.h" />
     <ClInclude Include="..\common\net\Defs\Sender.h" />
     <ClInclude Include="..\common\net\Defs\SenderImpl.h" />
+    <ClInclude Include="..\common\net\Defs\ServerCompsDef.h" />
     <ClInclude Include="..\common\net\Impl\FS_Addr.h" />
     <ClInclude Include="..\common\net\Impl\FS_AddrImpl.h" />
     <ClInclude Include="..\common\net\Impl\FS_Client.h" />
